# baseline-selection-4tops

./: Dockerfile  README.md  updateAnalysisTop.sh
Framework/: .clang-format  CMakeLists.txt  README.md
Framework/OffSM4topsTool/: CMakeLists.txt  README.md
Framework/OffSM4topsTool/OffSM4topsTool/: Add1LOSVar.h  AddBDT1LOS.h  AddSSMLVar.h  CommonTools.h  OffSM4topsConfiguration.h  OffSM4topsToolDictionary.h  SSMLMVAApplication.h  TruthHelpers.h  TtTRF.h
Framework/OffSM4topsTool/PackageFilters/: offline_packages.txt
Framework/OffSM4topsTool/Root/: Add1LOSVar.cxx  AddBDT1LOS.cxx  AddSSMLVar.cxx  CommonTools.cxx  LinkDef.h  OffSM4topsConfiguration.cxx  OffSM4topsToolDictionary.cxx  SSMLMVAApplication.cxx  TruthHelpers.cxx  TtTRF.cxx
Framework/OffSM4topsTool/python/: MergeSample.py  README.md  offline-wrapper.py
Framework/OffSM4topsTool/python/configs/: VariablesToRead.txt  VariablesToSave.txt  configuration.txt  inputs.txt
Framework/OffSM4topsTool/python/lib/: Class.py  HBSM4t-212120_LooseSSML_data.py  HBSM4t-212120_SSML_data.py  HBSM4t-212120_SSML_mc16a.py  HBSM4t-212120_SSML_mc16a_syst.py  HBSM4t-212120_SSML_mc16d.py  HBSM4t-212120_SSML_mc16d_syst.py  HBSM4t-212120_SSML_mc16e.py  HBSM4t-212120_SSML_mc16e_syst.py  README.md  listMaker.py
Framework/OffSM4topsTool/python/lib/ProdList_ForPostProduction/: mc16a_SM4tops_ForPostProduction.py  mc16d_SM4tops_ForPostProduction.py  mc16e_SM4tops_ForPostProduction.py
Framework/OffSM4topsTool/share/: VariablesToRead.txt  VariablesToSave.txt  configuration.dilep.txt  configuration.ljets.txt  configuration.txt  ttbarStitchingDsidMap.json  weights.ttTRF.txt  weights.txt
Framework/OffSM4topsTool/share/GridConfig/: DecoToSave_grid.1LOS.txt  DecoToSave_grid_sys.1LOS.txt  VariablesToRead_grid.1LOS.txt  VariablesToRead_grid_sys.1LOS.txt  VariablesToSave_grid.1LOS.txt  VariablesToSave_grid_sys.1LOS.txt  breakline.sh  configuration_grid.1LOS.txt  weights_grid.1LOS.txt
Framework/OffSM4topsTool/util/: SM4t-offline.cxx
Framework/SM4tops1LOS/: CMakeLists.txt
Framework/SM4tops1LOS/Root/: EventDecorator.cxx  LinkDef.h  SM4tops1LOSLoader.cxx
Framework/SM4tops1LOS/SM4tops1LOS/: EventDecorator.h  SM4tops1LOSLoader.h
Framework/SM4topsCommon/: CMakeLists.txt
Framework/SM4topsCommon/Root/: ElectronDecorator.cxx  EventDecorator.cxx  LinkDef.h  MuonDecorator.cxx  QGVar.cxx  SM4topsCommonLoader.cxx  ToolBox.cxx  TruthDecorator.cxx
Framework/SM4topsCommon/SM4topsCommon/: ElectronDecorator.h  EventDecorator.h  MuonDecorator.h  QGVar.h  SM4topsCommonLoader.h  ToolBox.h  TruthDecorator.h
Framework/SM4topsSSML/: CMakeLists.txt
Framework/SM4topsSSML/Root/: ElectronDecorator.cxx  EventDecorator.cxx  LeptonChannelSelector.cxx  LeptonOrdering.cxx  LeptonVectorDecorator.cxx  LinkDef.h  MllSelector.cxx  MllWindowSelector.cxx  Muon.cxx  SM4topsSSMLLoader.cxx  SM4topsSSMLObjectLoader.cxx  SSOSDilepSelector.cxx  TrigMatch.cxx  TruthMatchSelector.cxx  ZVetoSelector.cxx
Framework/SM4topsSSML/SM4topsSSML/: Electron.h  ElectronDecorator.h  EventDecorator.h  LeptonChannelSelector.h  LeptonOrdering.h  LeptonVectorDecorator.h  MllSelector.h  MllWindowSelector.h  Muon.h  SM4topsSSMLLoader.h  SM4topsSSMLObjectLoader.h  SSOSDilepSelector.h  TrigMatch.h  TruthMatchSelector.h  ZVetoSelector.h
Framework/TtTRF/: CMakeLists.txt  ChangeLog
Framework/TtTRF/Root/: TtTRFapplication.cxx  TtTRFreader.cxx
Framework/TtTRF/TtTRF/: TtTRFapplication.h  TtTRFreader.h
Framework/TtTRF/share/: configuration.ljets.test.txt  runGetttTRF.sh  weights.ttTRF.txt  weights.txt
Framework/TtTRF/util/: GetEffexpost.C  check_diff.C  check_up_down.C  eff_from_cont.C  save_extrap.C  show_extrap.C  study_extrap.C
MVAmodels_SSML/BSMBDT/: BSMBDT_Official_AT212120_otherBKG07_NT1000_Depth4_SubSam0.6_eta0.01_train_fold123_test_fold4.h5  BSMBDT_Official_AT212120_otherBKG07_NT1000_Depth4_SubSam0.6_eta0.01_train_fold124_test_fold3.h5  BSMBDT_Official_AT212120_otherBKG07_NT1000_Depth4_SubSam0.6_eta0.01_train_fold134_test_fold2.h5  BSMBDT_Official_AT212120_otherBKG07_NT1000_Depth4_SubSam0.6_eta0.01_train_fold234_test_fold1.h5
MVAmodels_SSML/SMBDT/: SMBDT_Official_AT212120_NT800_Depth3_SubSam0.6_colTree0.4_eta0.03_train_even_test_odd.h5  SMBDT_Official_AT212120_NT800_Depth3_SubSam0.6_colTree0.4_eta0.03_train_odd_test_even.h5
grid_post_prod/: ProductionUtils.C  README.md  decorate_grid_offline.py  dict_datasets.py  list_dids.sh  merge_grid_offline.py  produce_grid_offline.py
postProd/: VariablesToRead.SSML.txt  VariablesToRead.txt  VariablesToSave.SSML.txt  VariablesToSave.txt  configuration.SSML.txt  configuration.txt  input_1LOS.txt  input_SSML.txt  weights.SSML.txt  weights.txt
postProd/Examples/: DecoToSave_BDT.1LOS.txt  VariablesToRead_BDT.1LOS.txt  VariablesToSave_BDT.1LOS.txt  configuration_BDT.1LOS.txt  weights_BDT.1LOS.txt
postProd/Examples/SSML_ttbarCombinations/: README.md  VariablesToRead.txt  VariablesToSave.txt  config.txt
preProd/: 01SubmitToGrid_simple.py  check_production.py  check_replication.py  confGenerator.py  create_symbolicLinks.py  cuts_data_SM4tops_1LOS.txt  cuts_data_SM4tops_SSML.txt  cuts_data_SM4tops_SSML_loose.txt  cuts_data_SM4tops_SSML_syst.txt  cuts_mc16a_SM4tops_1LOS.txt  cuts_mc16a_SM4tops_1LOS_syst.txt  cuts_mc16a_SM4tops_SSML.txt  cuts_mc16a_SM4tops_SSML_loose.txt  cuts_mc16a_SM4tops_SSML_syst.txt  cuts_mc16d_SM4tops_1LOS.txt  cuts_mc16d_SM4tops_1LOS_syst.txt  cuts_mc16d_SM4tops_SSML.txt  cuts_mc16d_SM4tops_SSML_loose.txt  cuts_mc16d_SM4tops_SSML_syst.txt  cuts_mc16e_SM4tops_1LOS.txt  cuts_mc16e_SM4tops_1LOS_syst.txt  cuts_mc16e_SM4tops_SSML.txt  cuts_mc16e_SM4tops_SSML_loose.txt  cuts_mc16e_SM4tops_SSML_syst.txt  data_SM4tops.py  mc16a_SM4tops.py  mc16d_SM4tops.py  mc16e_SM4tops.py  setup_production.sh  submitToGrid_1LOS_1.py  submitToGrid_1LOS_2.py  submitToGrid_1LOS_3.py  submitToGrid_SSML_1.py  submitToGrid_SSML_2.py  submitToGrid_SSML_3.py  submitToGrid_SSML_Loose.py  updateTOPQ1helper.py  validation.py
